--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "incremental": true,
-    "target": "ES2022",
+    "target": "es2022",
     "useDefineForClassFields": true,
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
+    "lib": ["es2022", "dom", "dom.iterable"],
+    "module": "esnext",
     "skipLibCheck": true,
 
     /* Bundler mode */
