--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
+    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "incremental": true,
-    "target": "es2022",
+    "target": "ES2022",
     "useDefineForClassFields": true,
-    "lib": ["es2022", "dom", "dom.iterable"],
-    "module": "esnext",
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
     "skipLibCheck": true,
 
     /* Bundler mode */
